# Recipes

./: .gitignore  CMakeLists.txt  README.md  recipes.sln
recipes/: main.cpp  recipes.cpp  recipes.vcxproj  recipes.vcxproj.filters
recipes/utils/: parser.h
